--- a/angular.json
+++ b/angular.json
@@ -6,7 +6,7 @@
     "AngularForm": {
       "projectType": "application",
       "schematics": {},
-      "root": "",
+      "root": "src/",
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
@@ -14,17 +14,17 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/AngularForm",
-            "index": "./src/index.html",
-            "main": "./src/main.ts",
-            "polyfills": "./src/polyfills.ts",
+            "index": "index.html",
+            "main": "main.ts",
+            "polyfills": "polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
-              "./src/favicon.ico",
-              "./src/assets"
+              "favicon.ico",
+              "assets"
             ],
             "styles": [
-              "./src/styles.css"
+              "styles.css"
             ],
             "scripts": []
           },
